Prevent navbar-fixed-top from flickering during scroll on Webkit

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -142,6 +142,10 @@
   right: 0;
   left: 0;
   z-index: @zindex-navbar-fixed;
+  
+  // Prevent navbar-fixed-top from flickering during scroll on Webkit
+  -webkit-backface-visibility:hidden; 
+  -webkit-transform: translateZ(0);
 
   // Undo the rounded corners
   @media (min-width: @grid-float-breakpoint) {
